# tools

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitblameignore  .gitignore  .gitmodules  .gitpod.yml  .prettierrc  .rgignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.benchmark  GOVERNANCE.md  MODERATION.md  READMD.cn.md  README.md  a.txt  callgrind.out.8186  checker.js  clippy.toml  codegen.sh  completion  expr-context.perf.txt  format-folder.patch  generate-all-file  generate-all-files  input.toml  justfile  netlify.toml  package-lock.json  package.json  result  rome  rome.bat  rome.json  (+10 more)
crates/formatter/: Cargo.toml  README.md
crates/formatter/src/: cst.rs  format_context.rs  format_element.rs  format_elements.rs  format_json.rs  format_node.rs  format_token.rs  format_token_macro.rs  format_tokens.rs  format_tokens_macro.rs  formatter.rs  intersperse.rs  lib.rs  printer.rs  token.rs  token_cache.rs  tokens.rs
crates/formatter/tests/: spec_test.rs  spec_tests.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: languages.rs  lib.rs  main.rs  sourcegen.rs  syntax_kind.rs
crates/rome_analyze/: CONTRIBUTING.md  Cargo.toml  README.md
crates/rome_analyze/src/: analysis_server.rs  analyzers.rs  assists.rs  categories.rs  context.rs  diagnostics.rs  lib.rs  main.rs  matcher.rs  no_extra_boolean_cast.rs  options.rs  query.rs  registry.rs  rule.rs  services.rs  signals.rs  suppressions.rs  syntax.rs  syntax_edit.rs  utils.rs  visitor.rs
crates/rome_analyze/tests/: spec_tests.rs
crates/rome_aria/: Cargo.toml
crates/rome_aria/src/: constants.rs  generated.rs  iso.rs  lib.rs  macros.rs  properties.rs  roles.rs
crates/rome_aria_metadata/: Cargo.toml  build.rs
crates/rome_aria_metadata/src/: lib.rs
crates/rome_benchmarker/: Cargo.toml
crates/rome_benchmarker/src/: lib.rs
crates/rome_bin/: Cargo.toml  README.md
crates/rome_bin/src/: cli.rs  lib.rs  main.rs  server.rs
crates/rome_cli/: Cargo.toml  README.md
crates/rome_cli/examples/: input.js  input.json  lint_problems.cjs  run_cli.rs
crates/rome_cli/fixtures/: input.json
crates/rome_cli/src/: cli_options.rs  configuration.rs  diagnostics.rs  execute.rs  global_options.rs  lib.rs  main.rs  metrics.rs  panic.rs  parse_arguments.rs  termination.rs  traversal.rs  vcs.rs
crates/rome_cli/tests/: configs.rs  main.rs  snap_test.rs
crates/rome_console/: Cargo.toml  README.md
crates/rome_console/src/: diff.rs  fmt.rs  lib.rs  markup.rs  write.rs
crates/rome_console/tests/: macro.rs
crates/rome_control_flow/: Cargo.toml
crates/rome_control_flow/src/: builder.rs  lib.rs
crates/rome_css_factory/: Cargo.toml
crates/rome_css_factory/src/: generated.rs  lib.rs
crates/rome_css_parser/: Cargo.toml  README.md
crates/rome_css_parser/src/: lib.rs  parser.rs  prelude.rs  syntax.rs  token_source.rs
crates/rome_css_parser/tests/: spec_test.rs  spec_tests.rs
crates/rome_css_syntax/: Cargo.toml
crates/rome_css_syntax/src/: ast.rs  generated.rs  lib.rs  syntax_node.rs  util.rs
crates/rome_deserialize/: Cargo.toml
crates/rome_deserialize/src/: diagnostics.rs  json.rs  lib.rs  string_set.rs  visitor.rs
crates/rome_diagnostics/: CONTRIBUTING.md  Cargo.toml  README.md
crates/rome_diagnostics/examples/: cli.rs  fs.rs  lint.rs  serde.rs
crates/rome_diagnostics/src/: adapters.rs  advice.rs  context.rs  diagnostic.rs  display.rs  emit.rs  error.rs  file.rs  formatters.rs  lib.rs  location.rs  lsp.rs  panic.rs  serde.rs  suggestion.rs
crates/rome_diagnostics/tests/: macros.rs
crates/rome_diagnostics_categories/: Cargo.toml  README.md  build.rs
crates/rome_diagnostics_categories/src/: categories.rs  lib.rs
crates/rome_diagnostics_macros/: Cargo.toml
crates/rome_diagnostics_macros/src/: generate.rs  lib.rs  parse.rs
crates/rome_flags/: Cargo.toml
crates/rome_flags/src/: lib.rs
crates/rome_formatter/: Cargo.toml  README.md  shared_traits.rs
crates/rome_formatter/docs/: implement_the_formatter.md  write_tests.md
crates/rome_formatter/src/: arguments.rs  buffer.rs  builders.rs  check_reformat.rs  comments.rs  cst.rs  diagnostics.rs  format_element.rs  format_elements.rs  format_extensions.rs  format_json.rs  formatter.rs  formatter_traits.rs  group_id.rs  interpreter.rs  intersperse.rs  lib.rs  macros.rs  main.rs  prelude.rs  printed_tokens.rs  printer.rs  separated.rs  source_map.rs  token.rs  trivia.rs  utils.rs  verbatim.rs
crates/rome_formatter/tests/: check_reformat.rs  prettier_tests.rs  spec_test.rs  spec_tests.rs
crates/rome_formatter_test/: Cargo.toml
crates/rome_fs/: Cargo.toml  README.md
crates/rome_idl/: Cargo.toml
crates/rome_js_analyze/: Cargo.toml
crates/rome_js_factory/: Cargo.toml  README.md
crates/rome_js_formatter/: CONTRIBUTING.md  Cargo.toml  PRETTIER_LICENSE  README.md  report1.md
crates/rome_js_lexer/: CHANGELOG.md  Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  init-fuzzer.sh  reinit-fuzzer.sh
fuzz/corpus/: rome_parse_all  rome_parse_json  rome_parse_typescript
fuzz/fuzz_targets/: rome_common.rs  rome_format_all.rs  rome_format_d_ts.rs  rome_format_json.rs  rome_format_jsx.rs  rome_format_module.rs  rome_format_script.rs  rome_format_tsx.rs  rome_format_typescript.rs  rome_parse_all.rs  rome_parse_d_ts.rs  rome_parse_json.rs  rome_parse_jsx.rs  rome_parse_module.rs  rome_parse_script.rs  rome_parse_tsx.rs  rome_parse_typescript.rs
playground/: Cargo.toml  package-lock.json  package.json
playground/src/: App.tsx  IndentStyleSelect.tsx  LineWidthInput.tsx  lib.rs
xtask/: Cargo.toml  README.md  dummy.ungram  js.ungram
xtask/bench/: Cargo.toml  README.md
xtask/codegen/: Cargo.toml  README.md  css.ungram  js.ungram  json.ungram  md.ungram
xtask/contributors/: Cargo.toml
xtask/coverage/: Cargo.toml  README.md
xtask/docgen/: Cargo.toml
xtask/libs_bench/: Cargo.toml
xtask/lintdoc/: Cargo.toml
xtask/src/: ast.rs  ast_src.rs  codegen.rs  glue.rs  lib.rs  main.rs  test262_result.json  test262_result_copy.json  unicode.rs
(+20906 files in other folders)
