[package]
name = "rome-fuzz"
version = "0.0.0"
authors = [
  "Addison Crump <research@addisoncrump.info>",
]
publish = false
edition = "2021"

[features]
default = ["libfuzzer"]
full-idempotency = []
libfuzzer = ["libfuzzer-sys/link_libfuzzer"]
rome_all = []

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer", default-features = false }
rome_formatter = { path = "../crates/rome_formatter" }
rome_js_formatter = { path = "../crates/rome_js_formatter" }
rome_js_parser = { path = "../crates/rome_js_parser" }
rome_js_syntax = { path = "../crates/rome_js_syntax" }
rome_json_formatter = { path = "../crates/rome_json_formatter" }
rome_json_parser = { path = "../crates/rome_json_parser" }
rome_json_syntax = { path = "../crates/rome_json_syntax" }
similar = { version = "2.2.1" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "rome_parse_all"
path = "fuzz_targets/rome_parse_all.rs"
required-features = ["rome_all"]

[[bin]]
name = "rome_parse_d_ts"
path = "fuzz_targets/rome_parse_d_ts.rs"

[[bin]]
name = "rome_parse_json"
path = "fuzz_targets/rome_parse_json.rs"

[[bin]]
name = "rome_parse_module"
path = "fuzz_targets/rome_parse_module.rs"

[[bin]]
name = "rome_parse_script"
path = "fuzz_targets/rome_parse_script.rs"

[[bin]]
name = "rome_parse_jsx"
path = "fuzz_targets/rome_parse_jsx.rs"

[[bin]]
name = "rome_parse_tsx"
path = "fuzz_targets/rome_parse_tsx.rs"

[[bin]]
name = "rome_parse_typescript"
path = "fuzz_targets/rome_parse_typescript.rs"

[[bin]]
name = "rome_format_all"
path = "fuzz_targets/rome_format_all.rs"
required-features = ["rome_all"]

[[bin]]
name = "rome_format_d_ts"
path = "fuzz_targets/rome_format_d_ts.rs"

[[bin]]
name = "rome_format_json"
path = "fuzz_targets/rome_format_json.rs"

[[bin]]
name = "rome_format_module"
path = "fuzz_targets/rome_format_module.rs"

[[bin]]
name = "rome_format_script"
path = "fuzz_targets/rome_format_script.rs"

[[bin]]
name = "rome_format_jsx"
path = "fuzz_targets/rome_format_jsx.rs"

[[bin]]
name = "rome_format_tsx"
path = "fuzz_targets/rome_format_tsx.rs"

[[bin]]
name = "rome_format_typescript"
path = "fuzz_targets/rome_format_typescript.rs"

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true
