[package]
name = "rome-playground"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
rome_formatter = { path = "../crates/rome_formatter" }
rslint_parser = { path = "../crates/rslint_parser" }
rslint_errors = { path = "../crates/rslint_errors" }
