[package]
name = "xtask"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
quote = "1.0.14"
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
anyhow = "1.0.52"
pico-args = "0.3.4"
syn = { version = "1.0.85", features = ["full", "parsing"] }
unindent = "0.1.7"
convert_case = "0.5.0"
regex = "1.5.4"
serde =  { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
once_cell = "1.9.0"
rslint_parser = { path = "../crates/rslint_parser", version = "0.3" }
rslint_errors = { path = "../crates/rslint_errors", version = "0.2.0" }
# rslint_config = { path = "../crates/rslint_config", version = "0.1", features = ["schema"] }
ascii_table = "3.0.2"
colored = "2.0.0"
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
walkdir = "2.3.2"
serde_json = "1.0.74"
schemars = "0.8.8"
yastl = "0.1.2"
num_cpus = "1.13.1"
ungrammar = "1.14.9"
ureq = "2.4.0"
url = "2.2.2"
timing = "0.2.3"
ansi_rgb = "0.2.0"
dhat = { version = "0.2.4", optional = true }
humansize = "1.1.1"
itertools = "0.10.3"
criterion = "0.3.5"

[features]
dhat-on = ["dhat"]
