[package]
name = "rome-formatter"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rslint_parser = { path = "../rslint_parser" }
parser = { path = "../parser" }
syntax = { path = "../syntax" }
rowan = "0.13.2"
[dev-dependencies]
tests_macros = { path = "../tests_macros" }
