[package]
name = "rome-formatter"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rslint_parser = { path = "../rslint_parser" }
rome_rowan = { path = "../rome_rowan" }
path = { version = "0.0.0", path = "../path" }
rome_core = { version = "0.0.0", path = "../rome_core" }

[dev-dependencies]
tests_macros = { path = "../tests_macros" }
