[package]
name = "parser"
version = "0.0.0"
description = ""
license = "MIT"
edition = "2018"
default-run = "parser"

[dependencies]
anyhow = "1"
tree-sitter = "0.19"
tree-sitter-typescript = "0.19"
rowan = "0.13.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
quote = "1.0.9"
proc-macro2 = "1"
xshell = "0.1"
indexmap = {version = "1", features = ["serde-1"] }
# syntax_kind = {path = "../syntax_kind"}