[package]
name = "rome_analyze"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan.workspace = true
rome_console.workspace = true
rome_diagnostics.workspace = true
rome_json_parser.workspace = true
rome_deserialize.workspace = true
bitflags.workspace = true
rustc-hash = { workspace = true }
serde = { version = "1.0.136", features = ["derive"] }
schemars = { version = "0.8.10", optional = true }
tracing = { workspace = true }


[features]
serde = ["schemars"]
