[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "rome_analyze"
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
rome_console       = { workspace = true }
rome_diagnostics   = { workspace = true }
rome_rowan         = { workspace = true }
rustc-hash         = { workspace = true }
schemars           = { version = "0.8.10", optional = true }
serde              = { version = "1.0.136", features = ["derive"] }
tracing            = { workspace = true }


[features]
serde = ["schemars"]
