[package]
name                 = "rome_aria_metadata"
version              = "0.0.0"
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
license.workspace    = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
quote       = { workspace = true }
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
case        = "1.0.0"
