[package]
name = "rome_benchmarker"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
itertools = "0.10.3"
rome_js_syntax = { path = "../../crates/rome_js_syntax" }
rslint_parser = { path = "../../crates/rslint_parser"}
rslint_errors = { path = "../../crates/rslint_errors"}
rome_formatter = { path = "../../crates/rome_formatter"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
timing = "0.2.3"
thiserror = "1.0.30"

# dhat-on
dhat = { version = "0.2.4", optional = true }
humansize = {version = "1.1.1", optional = true }

[features]
dhat-on = ["dhat", "humansize"]
