[package]
name = "rome_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rome"
path = "src/main.rs"

[dependencies]
rome_cli = { path = "../rome_cli" }
rome_lsp = { path = "../rome_lsp" }
rome_service = { path = "../rome_service" }

tokio = { version = "1.15.0", features = ["io-std", "io-util", "net", "time", "rt", "rt-multi-thread"] }
tower-lsp = { version = "0.17.0"}

tracing = { version = "0.1.31", default-features = false, features = ["std"] }
tracing-tree = "0.2.0"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.127"
tokio = { version = "1.15.0", features = ["io-std", "io-util", "net", "time", "process", "rt", "rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.29"
