[package]
authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
name       = "rome_cli"
repository = { workspace = true }
version    = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rome"
path = "src/main.rs"

[dependencies]
anyhow              = "1.0.52"
bpaf                = { workspace = true }
crossbeam           = "0.8.1"
dashmap             = { workspace = true }
globset             = "0.4.10"
hdrhistogram        = { version = "7.5.0", default-features = false }
indexmap            = { workspace = true }
lazy_static         = { workspace = true }
pico-args           = { version = "0.5.0", features = ["eq-separator"] }
rayon               = "1.5.1"
rome_console        = { path = "../rome_console" }
rome_deserialize    = { path = "../rome_deserialize" }
rome_diagnostics    = { path = "../rome_diagnostics" }
rome_flags          = { path = "../rome_flags" }
rome_formatter      = { path = "../rome_formatter" }
rome_fs             = { path = "../rome_fs" }
rome_json_formatter = { path = "../rome_json_formatter" }
rome_json_parser    = { path = "../rome_json_parser" }
rome_json_syntax    = { path = "../rome_json_syntax" }
rome_lsp            = { path = "../rome_lsp" }
rome_migrate        = { path = "../rome_migrate" }
rome_rowan          = { path = "../rome_rowan" }
rome_service        = { path = "../rome_service" }
rome_text_edit      = { path = "../rome_text_edit" }
rome_text_size      = { path = "../rome_text_size" }
serde               = { version = "1.0.133", features = ["derive"] }
serde_json          = { version = "1.0.74" }
tokio               = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }
tracing             = { workspace = true }
tracing-appender    = "0.2"
tracing-subscriber  = { version = "0.3.16", features = ["env-filter"] }
tracing-tree        = "0.2.2"

[target.'cfg(unix)'.dependencies]
libc  = "0.2.127"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.29"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
insta               = { workspace = true }
rome_js_formatter   = { path = "../rome_js_formatter" }
rome_json_formatter = { path = "../rome_json_formatter" }
rome_json_parser    = { path = "../rome_json_parser" }
tokio               = { workspace = true, features = ["io-util"] }

[features]
docgen = ["bpaf/docgen"]
