[package]
name = "rome_console"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Expose utilities to print HTML-syntax messages"
repository.workspace = true
documentation = "https://rustdocs.rome.tools/rome_console/index.html"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_markup = { version = "0.0.1", path = "../rome_markup" }
atty = "0.2.14"
rome_text_size = { workspace = true}
termcolor = "1.1.2"
unicode-width = "0.1.9"
serde = { version = "1.0.133", optional = true, features = ["derive"] }
schemars = { version = "0.8.10", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
serde_markup = ["serde", "schemars"]
