[package]
authors.workspace    = true
description          = "Expose utilities to print HTML-syntax messages"
documentation        = "https://rustdocs.rome.tools/rome_console/index.html"
edition.workspace    = true
license.workspace    = true
name                 = "rome_console"
repository.workspace = true
version              = "0.0.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty           = "0.2.14"
rome_markup    = { workspace = true }
rome_text_size = { workspace = true }
schemars       = { workspace = true, optional = true }
serde          = { workspace = true, optional = true, features = ["derive"] }
termcolor      = "1.1.2"
unicode-width  = "0.1.9"

[dev-dependencies]
trybuild = "1.0"

[features]
serde_markup = ["serde", "schemars"]
