[package]
name = "rome_css_factory"
version = "0.0.0"
edition = "2021"
authors = ["Rome Tools Developers and Contributors"]
repository = "https://github.com/rome/tools"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan = { path = "../rome_rowan" }
rome_css_syntax = { path = "../rome_css_syntax" }
