[package]
name = "rome_css_factory"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan = { workspace = true }
rome_css_syntax = { path = "../rome_css_syntax" }
