[package]
authors.workspace    = true
categories           = ["parser-implementations", "development-tools"]
description          = "An extremely fast CSS parser"
documentation        = "https://rustdocs.rome.tools/rome_css_parser/index.html"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rome_css_parser"
repository.workspace = true
version              = "0.0.1"

[dependencies]
rome_console          = { workspace = true }
rome_diagnostics      = { workspace = true }
rome_js_unicode_table = { workspace = true }
rome_css_syntax       = { workspace = true }
rome_parser           = { workspace = true }
rome_rowan            = { workspace = true }
tracing               = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
tests_macros      = { workspace = true }

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true
