[package]
authors.workspace    = true
description          = "SyntaxKind and common rowan definitions for rome_css_parser"
documentation        = "https://docs.rs/rome_css_parser"
edition.workspace    = true
license.workspace    = true
name                 = "rome_css_syntax"
repository.workspace = true
version              = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rome_rowan = { workspace = true }
