[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "rome_deserialize"
repository.workspace = true
version              = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap         = { workspace = true }
rome_console     = { workspace = true }
rome_diagnostics = { workspace = true }
rome_json_parser = { workspace = true }
rome_json_syntax = { workspace = true }
rome_rowan       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
