[package]
name = "rome_diagnostics"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Pretty error reporting library"
documentation = "https://rustdocs.rome.tools/rome_diagnostics/index.html"
categories = ["development-tools"]

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
rome_rowan = { workspace = true }
rome_console = { workspace = true, features = ["serde_markup"] }
rome_diagnostics_macros = { version = "0.0.1", path = "../rome_diagnostics_macros" }
rome_diagnostics_categories = { version = "0.0.1", path = "../rome_diagnostics_categories", features = ["serde"] }
rome_text_edit = { version = "0.0.1", path = "../rome_text_edit" }
rome_text_size = { version = "0.0.1", path = "../rome_text_size" }
unicode-width = "0.1.9"
serde = { version = "1.0.133", features = ["derive"] }
termcolor = "1.1.2"
schemars = { version = "0.8.10", optional = true }
bitflags = "1.3.2"
backtrace = "0.3.66"
pico-args = "0.5.0"
bpaf = { workspace = true }

[features]
schema = ["schemars", "rome_text_edit/schemars", "rome_diagnostics_categories/schemars"]

[dev-dependencies]
trybuild = "1.0"
serde_json = "1.0.74"
